k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: _REPO_NAME_
  namespace: default
  labels:
    run: _REPO_NAME_
spec:
  replicas: 1
  selector:
    matchLabels:
      run: _REPO_NAME_
  template:
    metadata:
      labels:
        run: _REPO_NAME_
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirst
      containers:
      - name: _REPO_NAME_
        image: _IMAGE_NAME_
        imagePullPolicy: Always
