k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ing
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '1800'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '1800'
  labels:
    run: backend-ing
spec:
  tls:
    - hosts:
        - ucn.electivos.backend
      secretName: a0e4644cb90df4fe09b98b7ee362d166
  rules:
    - host: ucn.electivos.backend
      http:
        paths:
          - path: /ucn
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-electivos-np
                port:
                  number: 10000
